--- a/css/styles.css
+++ b/css/styles.css
@@ -1,44 +1,125 @@
 body {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
+nav, footer {
+  background: #02b3e4;
+}
+
+/**********/
+
+/* Header */
+
+/**********/
+
 .top_head {
-	border-bottom: 4px solid #02b3e4;
-	padding-bottom: 15px;
-	margin-bottom: 20px;
+  border-bottom: 4px solid #02b3e4;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .headerlogo {
-	height: 150px;
+  height: 150px;
 }
 
 .header_box {
-	text-align: right;
+  text-align: right;
 }
 
 .header_name {
-	font-family: Raleway, sans-serif;
-	font-weight: 100;
-	margin-top: 44px;
-	}
+  font-family: Raleway, sans-serif;
+  font-weight: 100;
+  margin-top: 44px;
+}
 
 .header_label {
-	font-family: Raleway, sans-serif;
-	font-weight: 400;
-	margin-top: 10px;
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  margin-top: 10px;
 }
 
-.featured_work {
-	font-family: Raleway, sans-serif;
-	font-weight: 400;
-	color: #7d97ad;
+/********/
+
+/* nav */
+
+/******/
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  font-size: 1.25em;
 }
 
-.galleryImg {
-text-align: center;
+nav a {
+  color: #fff;
+  display: block;
+  text-align: right;
+  padding: 10px 10px;
+  margin-top: 10px;
+}
+
+nav a:hover {
+  color: #7d97ad;
+}
+
+nav a:visited {
+  color: #2d3c49;
+}
+
+/******************/
+
+/* featured work */
+
+/****************/
+
+.headline {
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  color: #7d97ad;
+}
+
+.gallerytext {
+  text-align: center;
 }
 
 .caption p {
-	font-style: italic;
+  font-style: italic;
+}
+
+/**********/
+
+/* *FORM **/
+
+/**********/
+
+label {
+  color: #2d3c49;
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  margin-left: 5px;
+  padding-bottom: 5px;
+}
+
+.col {
+  padding-bottom: 10px;
+}
+
+.fields {
+  padding: 10px 10px;
+}
+
+/************/
+
+/* *FOOTER **/
+
+/************/
+
+footer {
+  padding: 10px;
+  text-align: center;
+}
+
+.icons {
+  font-size: 2em;
 }
