--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,14 @@ body {
   margin: 0;
 }
 
-nav, footer {
+nav {
   background: #02b3e4;
 }
 
-.contact-nav ul{
+.contact-nav ul {
   padding-right: 190px;
 }
+
 /**********/
 
 /* Header */
@@ -77,6 +78,12 @@ nav a:visited {
 
 /****************/
 
+.img-responsive {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+
 .headline {
   font-family: Raleway, sans-serif;
   font-weight: 400;
@@ -87,16 +94,13 @@ nav a:visited {
   text-align: center;
 }
 
-.caption p {
+.caption-text {
   font-style: italic;
 }
 
-/*.lrg_image {
-  max-width: 100%;
-}*/
 /**********/
 
-/* *FORM **/
+/**FORM **/
 
 /**********/
 
@@ -112,7 +116,11 @@ label {
   padding-bottom: 5px;
 }
 
-.email-col, .name-col {
+.email-col {
+  padding-bottom: 10px;
+}
+
+.name-col {
   padding-bottom: 10px;
 }
 
@@ -134,6 +142,7 @@ label {
 footer {
   padding: 10px;
   text-align: center;
+  background: #02b3e4;
 }
 
 .rights {
